src/objects/MUSW__License2__c.object
<CustomObject>
    <fields>
        <fullName>Qualified_By__c</fullName>
        <description>What was the path to Licensure?</description>
        <inlineHelpText>What was the path to Licensure?</inlineHelpText>
        <label>Qualified By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Comity</fullName>
                </value>
                <value>
                    <fullName>Reciprocity</fullName>
                </value>
                <value>
                    <fullName>Examination</fullName>
                </value>
                <value>
                    <fullName>GrandParenting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualified_Thru__c</fullName>
        <label>Qualified Thru</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualifying_Elective_Licensure_Levels__c</fullName>
        <label>Qualifying Elective Licensure Levels</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Certified Residential Appraiser</fullName>
                </value>
                <value>
                    <fullName>Certified General Appraiser</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RFI_Notes__c</fullName>
        <label>RFI Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RFI_Send_Date__c</fullName>
        <description>Date 1st RFI was sent</description>
        <inlineHelpText>Date 1st RFI was sent</inlineHelpText>
        <label>RFI Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Notes__c</fullName>
        <label>RFP Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RFP_Send_Date__c</fullName>
        <description>Date 1st RFP was sent</description>
        <inlineHelpText>Date 1st RFP was sent</inlineHelpText>
        <label>RFP Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reinstatement_Eligibility_End_Date__c</fullName>
        <description>Date until which a credential is eligible for reinstatement - based on expiration date and logic from Renewal_Reinstatement_Eligibility__c</description>
        <label>Reinstatement Eligibility End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reinstatement_Eligible_Start_Date__c</fullName>
        <label>Reinstatement Eligible Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Related_License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related License</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Combined Licenses</relationshipLabel>
        <relationshipName>Combined_Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Cycle_End_Date__c</fullName>
        <description>To calculate the renewal cycle duration- Multiplying the renewal window by 12 as it is in years</description>
        <formula>ADDMONTHS(MUSW__Expiration_Date__c,Renewal_Window__c*12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Cycle End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Eligible_Start_Date__c</fullName>
        <description>Date when a credential becomes renewal eligible - it is based on expiration date and logic from Global Table- Renewal_Reinstatement_Eligibility__c</description>
        <label>Renewal Eligible Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Grace_Period_End_Date__c</fullName>
        <label>Renewal Grace Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Reinstatement_Total_Fee__c</fullName>
        <label>Renewal/Reinstatement Total Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewal_Reinstatement_Total_Payment__c</fullName>
        <label>Renewal/Reinstatement Total Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewal_Window__c</fullName>
        <formula>CASE( Credential__c, &quot;Manufactured Homes Salesperson&quot;, 4,&quot;Manufactured Homes Installer&quot;, 4,&quot;Manufactured Homes Dealer&quot;, 4,&quot;Manufactured Homes Manufacturer&quot;, 4, &quot;Soil Tester&quot;, 4,&quot;Soil Erosion Inspector&quot;, 4, &quot;UDC Inspection Agency&quot;, 4, &quot;UDC Electrical Inspector&quot;, 4, &quot;UDC HVAC Inspector&quot;, 4, &quot;UDC Plumbing Inspector&quot;, 4, &quot;UDC Construction Inspector&quot;, 4, &quot;Dwelling Contractor&quot;, 1, &quot;Dwelling Contractor Qualifier&quot;, 2, &quot;Dwelling Contractor Restricted&quot;, 1, &quot;Delegated Agent - Commercial Building&quot;, 5, &quot;Delegated Agent - Fire Supression/Alarm Systems&quot;, 5, &quot;Delegated Agent - Plumbing&quot;, 5, &quot;Delegated Agent - POWTS&quot;, 5, &quot;Delegated Agent - Elevator&quot;, 5, &quot;Delegated Agent - Boiler&quot;, 5, &quot;Delegated Agent - Other&quot;, 5, &quot;Manufactured Homes Community Permit&quot;, 2, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Window</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Replace_Title__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Replace Title</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_for_Deletion_Date__c</fullName>
        <description>Capture Date when request for deletion field is checked</description>
        <label>Request for Deletion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_for_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Request for Deletion</description>
        <label>Request for Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Seller_Permit_Number__c</fullName>
        <description>To store sales tax seller permit no</description>
        <label>Sales Tax Seller Permit Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Number__c</fullName>
        <description>Portal field.</description>
        <label>Section Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Security_Code__c</fullName>
        <label>Security Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_for_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected for Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_information_to_ASC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Using this field POLARIS will send license data to ASC on a nightly basis</description>
        <label>Send information to ASC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Accommodation_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Special Accommodation Request</description>
        <label>Special Accommodation Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Square_Footage__c</fullName>
        <label>Square Footage</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Previously_Titled_In__c</fullName>
        <description>State Previously Titled In</description>
        <label>State Previously Titled In</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <description>Sub-status is a dependent picklist driven off of Status.</description>
        <label>Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MUSW__Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Sub_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <description>Subtype</description>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MUSW__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Restaurant</fullName>
                </value>
                <value>
                    <fullName>Liquor</fullName>
                </value>
                <value>
                    <fullName>Funeral Home</fullName>
                </value>
                <value>
                    <fullName>Single Family Home</fullName>
                </value>
                <value>
                    <fullName>Multi Family Dwelling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Surety_Bond_Company_Name__c</fullName>
        <description>This field is created to capture the surety bond company name from license</description>
        <label>Surety Bond Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_deployment_field__c</fullName>
        <label>Test_deployment_field</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_to_License__c</fullName>
        <formula>IF( ISBLANK(App_Submitted_Date__c) , TODAY() - App_Submitted_Date__c, MUSW__Issue_Date__c - App_Submitted_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to License</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timeshare_Projects__c</fullName>
        <label># Timeshare Projects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trade_Name__c</fullName>
        <description>to store trade name</description>
        <label>Trade Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer_to_Spouse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Transfer of a title to a surviving spouse ONLY, no additional Co-Owners</description>
        <label>Transfer to Spouse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UBI_Number__c</fullName>
        <formula>Ultimate_Parent_Account__r.UBI_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UBI Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USPAP_Courses_Expiration_Date__c</fullName>
        <label>USPAP Courses Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ultimate_Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ultimate Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Child Licenses</relationshipLabel>
        <relationshipName>Child_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Upgrade_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upgrade Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Upgraded_License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Upgraded License</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Upgraded From Licenses</relationshipLabel>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WADOL_Comity_Reciprocity_License__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sprint 2A : bug - Reciprocity Flow</description>
        <label>Comity(Reciprocity) License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>License Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_Licensure_Level__c</fullName>
        <label>What Licensure Level?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>What_program_are_you_interested_in__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Registered Trainee</fullName>
                </value>
                <value>
                    <fullName>State Licensed</fullName>
                </value>
                <value>
                    <fullName>Certified Residential</fullName>
                </value>
                <value>
                    <fullName>Certified General</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Managing Broker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_program_are_you_interested_in__c</fullName>
        <label>What program are you interested in?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Appraisers</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Licensed Home Inspector</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Withhold_from_list_of_10_or_more__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Withhold from list of 10 or more</description>
        <label>Withhold from list of 10 or more</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Yes_Label__c</fullName>
        <formula>&apos;Yes&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yes Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isBranch_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isBranch License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>license_specific_email_addresses__c</fullName>
        <label>license specific email addresses</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>license_specific_email_addresses</valueSetName>
        </valueSet>
    </fields>
    <label>License</label>
    <listViews>
        <fullName>Active_Converted</fullName>
        <columns>NAME</columns>
        <columns>Applicant_Full_Name__c</columns>
        <columns>MUSW__Primary_Licensee__c</columns>
        <columns>MUSW__Status__c</columns>
        <columns>MUSW__Type__c</columns>
        <columns>Credential__c</columns>
        <columns>MUSW__Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MUSW__Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active Converted</label>
    </listViews>
    <listViews>
        <fullName>Active_Converted_UDCCI</fullName>
        <columns>NAME</columns>
        <columns>Applicant_Full_Name__c</columns>
        <columns>MUSW__Primary_Licensee__c</columns>
        <columns>MUSW__Status__c</columns>
        <columns>MUSW__Type__c</columns>
        <columns>Credential__c</columns>
        <columns>MUSW__Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>dadmi</value>
        </filters>
        <filters>
            <field>MUSW__Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Credential__c</field>
            <operation>equals</operation>
            <value>UDC Construction Inspector</value>
        </filters>
        <label>Active Converted UDC CI</label>
    </listViews>
    <listViews>
        <fullName>Appraisal_Controlling_Person_Queue_License2</fullName>
        <filterScope>Queue</filterScope>
        <label>Appraisal Controlling Person Queue</label>
        <queue>Appraisal_Controlling_Person_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Appraisal_Management_Company_Queue_License2</fullName>
        <filterScope>Queue</filterScope>
        <label>Appraisal Management Company Queue</label>
        <queue>Appraisal_Management_Company_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Appraiser_Course_Queue_License2</fullName>
        <filterScope>Queue</filterScope>
        <label>Real Estate Appraiser Courses Queue</label>
        <queue>Real_Estate_Appraiser_Courses_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Appraiser_Provider_Queue_License2</fullName>
        <filterScope>Queue</filterScope>
        <label>Appraiser Provider Queue</label>
        <queue>Appraiser_Provider_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Appraiser_Trainee_Queue_License2</fullName>
        <filterScope>Queue</filterScope>
        <label>Appraiser Trainee Queue</label>
        <queue>Appraiser_Trainee_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Camping_Resort_Company_Queue_License2</fullName>
        <filterScope>Queue</filterScope>
        <label>Camping Resort Company Queue</label>
        <queue>Camping_Resort_Company_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Camping_Resort_Salesperson_Queue_License2</fullName>
        <filterScope>Queue</filterScope>
        <label>Camping Resort Salesperson Queue</label>
        <queue>Camping_Resort_Salesperson_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Certified_General_Appraiser_Queue_License2</fullName>
        <filterScope>Queue</filterScope>
        <label>Certified General Appraiser Queue</label>
        <queue>Certified_General_Appraiser_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Certified_Residential_Appraiser_Queue_License2</fullName>
        <filterScope>Queue</filterScope>
        <label>Certified Residential Appraiser Queue</label>
        <queue>Certified_Residential_Appraiser_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Courses_Queue</fullName>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <label>Courses Queue</label>
        <language>en_US</language>
        <queue>Real_Estate_Appraiser_Courses_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Delegated_Municipality1</fullName>
        <columns>NAME</columns>
        <columns>MUSW__Applicant__c</columns>
        <columns>MUSW__Primary_Licensee__c</columns>
        <columns>MUSW__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Credential__c</field>
            <operation>contains</operation>
            <value>Delegated Agent</value>
        </filters>
        <label>Delegated Municipality</label>
    </listViews>
    <listViews>
        <fullName>Demo_List_View</fullName>
        <columns>NAME</columns>
        <columns>Applicant_Full_Name__c</columns>
        <columns>Account_Email__c</columns>
        <columns>MUSW__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>Demo List View</label>
    </listViews>
    <listViews>
        <fullName>Funeral_Embalmer</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Owner_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Number_of_Units__c</columns>
        <columns>MUSW__Applicant__c</columns>
        <columns>MUSW__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Credential__c</columns>
        <columns>Credential_Type__c</columns>
        <columns>MUSW__Total_Balance__c</columns>
        <columns>Application_Method__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Military_Spouse__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Credential_Type__c</field>
            <operation>equals</operation>
            <value>Funeral Director,Embalmer</value>
        </filters>
        <label>Funeral/Embalmer</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Licenses</pluralLabel>
    <recordTypes>
        <fullName>Business</fullName>
        <active>true</active>
        <description>for Business Type License</description>
        <label>Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>Course</fullName>
        <active>true</active>
        <description>This is the record type for Course Information</description>
        <label>Course</label>
    </recordTypes>
    <recordTypes>
        <fullName>Delegated_Agent_Record_Type</fullName>
        <active>true</active>
        <description>This is the record type for all Delegated Agent</description>
        <label>Delegated Agent Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Individual</fullName>
        <active>true</active>
        <description>for Individual Type License</description>
        <label>Individual22</label>
    </recordTypes>
    <recordTypes>
        <fullName>Manufactured_Homes_Record_Type</fullName>
        <active>true</active>
        <description>This is the record type for all Manufactured homes.</description>
        <label>Manufactured Homes Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Universal_Default_License_Record_Type</fullName>
        <active>true</active>
        <description>This is the record type if the application type doesn&apos;t appear on any other record types.</description>
        <label>Individual</label>
    </recordTypes>
    <recordTypes>
        <fullName>Unlicensed</fullName>
        <active>true</active>
        <description>For unlicensed business or professional</description>
        <label>Unlicensed</label>
    </recordTypes>
    <recordTypes>
        <fullName>eSLA_Portal</fullName>
        <active>true</active>
        <description>Record Type for Portal user</description>
        <label>eSLA Portal</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <sharingReasons>
        <fullName>Create_Credential_Delegate__c</fullName>
        <label>Create Credential - Delegate</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Insert_CredentialShare__c</fullName>
        <label>Insert_CredentialShare</label>
    </sharingReasons>
    <validationRules>
        <fullName>Can_not_select_region_value</fullName>
        <active>false</active>
        <errorConditionFormula>OR(
   AND(
$User.Bypass_Validation_Workflow_Rules__c = FALSE,
      ISCHANGED(Application_Type__c),
      NOT(ISPICKVAL(Application_Type__c,&quot;Funerals&quot;)),
      NOT(ISPICKVAL(Application_Type__c,&quot;Cemeteries&quot;))
  )
)</errorConditionFormula>
        <errorDisplayField>Region__c</errorDisplayField>
        <errorMessage>You can not select region for licenses other than Funeral and Cemeteries.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MUSW__LicenseeIsRequired</fullName>
        <active>false</active>
        <errorConditionFormula>AND (MUSW__Primary_Licensee__c = null,  MUSW__Applicant_is_Licensee__c  = false,ISNEW(),$Profile.Name != &apos;CP Profile&apos;)</errorConditionFormula>
        <errorMessage>Licensee is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MUSW__Renewal_Requires_Expiration_Date</fullName>
        <active>false</active>
        <description>Before renewing, a license is first required to be expired</description>
        <errorConditionFormula>AND(NOT(ISNULL(MUSW__Renewal_Date__c)), ISNULL(MUSW__Expiration_Date__c ))</errorConditionFormula>
        <errorMessage>License must be expiring before being renewed. Enter expiration date.</errorMessage>
    </validationRules>
</CustomObject>